2005-10-25 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.13.2
	
2005-10-25 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-file-util.c: Fix bug 319601, resolving relative references to an image's dependencies

2005-10-23 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* everywhere: use strings for RTTI, not sure about the speed hit, but allows us a lot more flexiblity
	* rsvg-base.c: hack char structs so that switch ignores them.

2005-10-23 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-private.h: removed obsolete percentage resolution structures
	* rsvg-base.c: char structs are back
	* rsvg-text.c: rewrite, now supports DOM stuff and trefs

2005-10-22 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cond.c (rsvg_cond_parse_system_language): setlocale(LC_ALL) 
	may return "C". Evaluate $LANG first, equate "C" with "en".
	
2005-10-22 Dom Lachowicz <cinamod@hotmail.com>

	* gtk-engine/svg-render.c: Cache RsvgHandles rather than GByteArrays
	containing SVG data. Preparation for move to cairo-only theme engine.
	
2005-10-22 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Rip out libart backend; require the cairo backend, and require cairo >= 1.0.2
	* Makefile.am: re-enable the gtk-engine and gdk-pixbuf-loader. Ditto, library re-org
	* librsvg-2.0.pc.in: Ditto
	* librsvg.spec.in: Ditto
	* rsvg.c: Ditto
	* gtk-engine/Makefile.am: Ditto
	
2005-10-22 Dom Lachowicz <cinamod@hotmail.com>

	* test-display.c: Implement image zooming. Todo: rewrite this to use Cairo.
	
2005-10-21 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cond.c: More robust way of getting your language
	
2005-10-22 Caleb Moore <c.moore@student.unsw.edu.au>
	
	* a_lot_of_places: implemented a system of late normalizations of lengths. Now used everywhere
	* rsvg-base.c: find out the size of the contents of an SVG if there is nothing else to go on.

2005-10-20 Dom Lachowicz <cinamod@hotmail.com>
