@@ -48,8 +48,11 @@ struct RsvgDimensionData {
 void        rsvg_init (void);
 void        rsvg_term (void);
 
-void        rsvg_set_default_dpi          (double dpi_x, double dpi_y);
-void        rsvg_handle_set_dpi           (RsvgHandle * handle, double dpi_x, double dpi_y);
+void        rsvg_set_default_dpi          (double dpi);
+void        rsvg_set_default_dpi_x_y          (double dpi_x, double dpi_y);
+
+void        rsvg_handle_set_dpi           (RsvgHandle * handle, double dpi);
+void        rsvg_handle_set_dpi_x_y           (RsvgHandle * handle, double dpi_x, double dpi_y);
 
 RsvgHandle *rsvg_handle_new               (void);
 gboolean    rsvg_handle_write             (RsvgHandle      *handle,
